# numberplace-core

./: Cargo.toml  TODO.md
src/: game.rs  generator.rs  lib.rs  normal_game.rs  pattern.rs  solver.rs
src/game/: setting.rs
src/normal_game/: cell.rs  group.rs  remove_answer.rs  setting.rs  shuffle.rs  solve.rs
