[package]
name = "numberplace-core"
version = "0.1.1-1"
authors = ["ysk8hori <ysk8.hori@gmail.com>"]
edition = "2018"
description = "Generate number-place (Sudoku)."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = '0.8.4'
slice-group-by = '0.2.6'
